tictactoe, color typing, and stoplight examples. more exercise ideas.

--- a/examples/js_focused/basic/stoplight/index.html
+++ b/examples/js_focused/basic/stoplight/index.html
@@ -8,12 +8,20 @@
 </head>
 <body>
 
-<div class="stoplight-container">
+<div class="columns">
+
+  <div class="column">
 
 
-  <div class="stoplight red-stoplight off"></div>
-  <div class="stoplight yellow-stoplight off"></div>
-  <div class="stoplight green-stoplight off"></div>
+    <div class="stoplight-container">
+      <div class="stoplight red-stoplight off"></div>
+      <div class="stoplight yellow-stoplight off"></div>
+      <div class="stoplight green-stoplight off"></div>
+    </div>
+  </div>
+  <div class="column">
+    <img id="walk-sign">
+  </div>
 </div>
 <script src="js/script.js"></script>
 </body>
