--- a/working/miles_km_converter/index.html
+++ b/working/miles_km_converter/index.html
@@ -7,9 +7,10 @@
 <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+<input id="kmInput" placeholder="Kilometers">
+<button id="convertBtn">Convert</button>
+<input id="milesInput" placeholder="Miles">
 
-<script src="js/levels.js"></script>
-<script src="js/game_objects.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
